--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,13 +10,14 @@
     <com.ssomai.android.scalablelayout.ScalableLayout
         android:id="@+id/scalableLayout"
         android:layout_width="394dp"
-        android:layout_height="104dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+
         app:scale_base_height="340"
-        app:scale_base_width="1220">
+        app:scale_base_width="2120">
 
         <EditText
             android:id="@+id/searchBar"
@@ -27,10 +28,10 @@
             android:imeOptions="actionDone"
             android:inputType="text"
             android:paddingStart="45dp"
-            app:scale_height="170"
-            app:scale_textsize="50"
+            app:scale_height="310"
+            app:scale_textsize="100"
             app:scale_top="30"
-            app:scale_width="1220" />
+            app:scale_width="2120" />
 
         <ImageButton
             android:id="@+id/back_icon"
@@ -39,10 +40,10 @@
             android:background="@android:color/transparent"
             android:onClick="back"
             android:scaleType="fitXY"
-            app:scale_height="130"
-            app:scale_left="50"
-            app:scale_top="58"
-            app:scale_width="100"
+            app:scale_height="150"
+            app:scale_left="70"
+            app:scale_top="110"
+            app:scale_width="150"
             tools:ignore="OnClick"
             android:src="@drawable/back" />
 
@@ -55,10 +56,10 @@
             android:background="@android:color/transparent"
             android:backgroundTint="#d3d3d3"
             android:visibility="gone"
-            app:scale_height="90"
-            app:scale_left="900"
-            app:scale_top="85"
-            app:scale_width="90" />
+            app:scale_height="180"
+            app:scale_left="1620"
+            app:scale_top="100"
+            app:scale_width="180" />
 
         <View
             android:id="@+id/lineView"
@@ -66,9 +67,9 @@
             android:layout_height="0.3dp"
             android:background="#d3d3d3"
             android:visibility="gone"
-            app:scale_height="70"
-            app:scale_left="1010"
-            app:scale_top="85"
+            app:scale_height="180"
+            app:scale_left="1830"
+            app:scale_top="100"
             app:scale_width="5" />
 
         <ImageButton
@@ -77,41 +78,11 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:scaleType="fitXY"
-            app:scale_height="100"
-            app:scale_left="1040"
-            app:scale_top="70"
-            app:scale_width="100"
+            app:scale_height="180"
+            app:scale_left="1870"
+            app:scale_top="100"
+            app:scale_width="180"
             android:src="@drawable/search_icon" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:background="@color/white"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
-            android:text="최근 검색어"
-            android:textColor="@color/black"
-            app:scale_height="150"
-
-            app:scale_textsize="70"
-            app:scale_top="195"
-            app:scale_width="1220" />
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:background="#00ff0000"
-            android:text="최근 검색 닫기"
-            android:textColor="@color/black"
-            app:scale_height="100"
-            app:scale_left="890"
-            app:scale_textsize="40"
-            app:scale_top="220"
-            app:scale_width="300" />
     </com.ssomai.android.scalablelayout.ScalableLayout>
 
 
@@ -124,13 +95,53 @@
         app:layout_constraintStart_toStartOf="@+id/scalableLayout"
         app:layout_constraintTop_toBottomOf="@+id/scalableLayout">
 
+        <com.ssomai.android.scalablelayout.ScalableLayout
+            android:id="@+id/scalableLayout2"
+            android:layout_width="374dp"
+            android:layout_height="60dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/scalableLayout"
+            app:scale_base_height="280"
+            app:scale_base_width="2120">
+
+            <TextView
+                android:id="@+id/recent_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:paddingLeft="20dp"
+                android:paddingTop="12dp"
+                android:text="최근 검색어"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                app:scale_height="280"
+                app:scale_textsize="100"
+                app:scale_width="2120" />
+
+            <Button
+                android:id="@+id/recent_close_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:background="#00ff0000"
+                android:paddingTop="1dp"
+                android:text="최근 검색 닫기"
+
+                app:scale_height="120"
+                app:scale_left="1540"
+                app:scale_textsize="75"
+                app:scale_top="90"
+                app:scale_width="530" />
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/wordRe"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/recy"
             android:orientation="vertical"
+            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constrainedHeight="true"
             tools:listitem="@layout/item" />
