--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -19,9 +19,10 @@
             android:text="단어"
             android:textColor="#000000"
             android:background="@drawable/under"
+            android:paddingTop="7dp"
             app:scale_height="11"
             app:scale_left="4"
-            app:scale_textsize="7"
+            app:scale_textsize="5.5"
             app:scale_top="3"
             app:scale_width="90"
             tools:ignore="MissingPrefix" />
