--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,93 +7,98 @@
     android:background="#D7EBEA"
     tools:context=".MainActivity">
 
-    <com.ssomai.android.scalablelayout.ScalableLayout
-        android:id="@+id/scalableLayout"
-        android:layout_width="394dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="15dp"
+    <FrameLayout
+        android:id="@+id/Frame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        app:scale_base_height="340"
-        app:scale_base_width="2120">
-
-        <EditText
-            android:id="@+id/searchBar"
+        <com.ssomai.android.scalablelayout.ScalableLayout
+            android:id="@+id/scalableLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/around"
-            android:hint="검색어 입력"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:paddingStart="45dp"
-            app:scale_height="310"
-            app:scale_textsize="100"
-            app:scale_top="30"
-            app:scale_width="2120" />
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
+            app:scale_base_height="340"
+            app:scale_base_width="2120">
 
-        <ImageButton
-            android:id="@+id/back_icon"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/transparent"
-            android:onClick="back"
-            android:scaleType="fitXY"
-            app:scale_height="150"
-            app:scale_left="70"
-            app:scale_top="110"
-            app:scale_width="150"
-            tools:ignore="OnClick"
-            android:src="@drawable/back" />
+            <EditText
+                android:id="@+id/searchBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/around"
+                android:hint="검색어 입력"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:paddingStart="45dp"
+                app:scale_height="310"
+                app:scale_textsize="100"
+                app:scale_top="30"
+                app:scale_width="2120" />
+
+            <ImageButton
+                android:id="@+id/back_icon"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:onClick="back"
+                android:scaleType="fitXY"
+                android:src="@drawable/back"
+                app:scale_height="150"
+                app:scale_left="70"
+                app:scale_top="110"
+                app:scale_width="150"
+                tools:ignore="OnClick" />
 
 
-        <ImageButton
-            android:id="@+id/clearB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/cross_icon"
-            android:background="@android:color/transparent"
-            android:backgroundTint="#d3d3d3"
-            android:visibility="gone"
-            app:scale_height="180"
-            app:scale_left="1620"
-            app:scale_top="100"
-            app:scale_width="180" />
+            <ImageButton
+                android:id="@+id/clearB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:backgroundTint="#d3d3d3"
+                android:src="@drawable/cross_icon"
+                android:visibility="gone"
+                app:scale_height="180"
+                app:scale_left="1620"
+                app:scale_top="100"
+                app:scale_width="180" />
 
-        <View
-            android:id="@+id/lineView"
-            android:layout_width="wrap_content"
-            android:layout_height="0.3dp"
-            android:background="#d3d3d3"
-            android:visibility="gone"
-            app:scale_height="180"
-            app:scale_left="1830"
-            app:scale_top="100"
-            app:scale_width="5" />
+            <View
+                android:id="@+id/lineView"
+                android:layout_width="wrap_content"
+                android:layout_height="0.3dp"
+                android:background="#d3d3d3"
+                android:visibility="gone"
+                app:scale_height="180"
+                app:scale_left="1830"
+                app:scale_top="100"
+                app:scale_width="5" />
 
-        <ImageButton
-            android:id="@+id/search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:scaleType="fitXY"
-            app:scale_height="180"
-            app:scale_left="1870"
-            app:scale_top="100"
-            app:scale_width="180"
-            android:src="@drawable/search_icon" />
-    </com.ssomai.android.scalablelayout.ScalableLayout>
+            <ImageButton
+                android:id="@+id/search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                android:src="@drawable/search_icon"
+                app:scale_height="180"
+                app:scale_left="1870"
+                app:scale_top="100"
+                app:scale_width="180" />
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+    </FrameLayout>
 
 
     <LinearLayout
+        android:id="@+id/lin"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="500dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/frame_bottombar"
-        app:layout_constraintEnd_toEndOf="@+id/scalableLayout"
-        app:layout_constraintStart_toStartOf="@+id/scalableLayout"
-        app:layout_constraintTop_toBottomOf="@+id/scalableLayout">
+        app:layout_constraintEnd_toEndOf="@+id/Frame"
+        app:layout_constraintStart_toStartOf="@+id/Frame"
+        app:layout_constraintTop_toBottomOf="@+id/Frame">
 
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:id="@+id/scalableLayout2"
@@ -113,8 +118,8 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="12dp"
                 android:text="최근 검색어"
-                android:textStyle="bold"
                 android:textColor="@color/black"
+                android:textStyle="bold"
                 app:scale_height="280"
                 app:scale_textsize="100"
                 app:scale_width="2120" />
@@ -148,11 +153,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recent"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/recy"
             android:orientation="vertical"
+            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constrainedHeight="true"
             tools:listitem="@layout/item_recent" />
