--- a/app/src/main/res/layout/item_after_search.xml
+++ b/app/src/main/res/layout/item_after_search.xml
@@ -19,7 +19,6 @@
         <com.ssomai.android.scalablelayout.ScalableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             app:scale_base_height="63"
             app:scale_base_width="100">
 
@@ -39,7 +38,7 @@
             <TextView
                 android:id="@+id/wme"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="설명"
                 android:textColor="#97000000"
                 android:maxLines="2"
@@ -49,10 +48,60 @@
                 app:scale_textsize="5"
                 app:scale_top="16"
                 app:scale_width="86"
-                app:textview_wrapcontent_direction="bottom"
-                app:textview_wrapcontent_movesiblings="true"
-                app:textview_wrapcontent_resizesurrounded="true"
                 tools:ignore="MissingPrefix" />
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="#d3d3d3"
+                app:scale_height="1"
+                app:scale_left="5"
+                app:scale_top="40"
+                app:scale_width="89"
+                />
+
+            <TextView
+                android:id="@+id/cate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="카테고리"
+                android:background="@drawable/round"
+                android:backgroundTint="?attr/colorPrimary"
+                app:scale_height="9"
+                app:scale_left="5"
+                app:scale_top="44.5"
+                android:textColor="@color/black"
+                app:scale_width="20"
+                app:scale_textsize="4"
+                android:paddingStart="6dp"
+                android:paddingEnd="6dp"
+                android:paddingTop="7dp"
+                app:textview_wrapcontent_direction="right"
+                app:textview_wrapcontent_movesiblings="false"
+
+                />
+
+            <TextView
+                android:id="@+id/hashT"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/round"
+                android:backgroundTint="#D7EBEA"
+                android:text="# 해시태그  "
+                android:textColor="@color/black"
+                app:scale_height="9"
+                app:scale_left="30"
+                app:scale_textsize="4"
+                app:scale_top="44.5"
+                app:scale_width="20"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingTop="7dp"
+                app:textview_wrapcontent_resizesurrounded="false"
+                app:textview_wrapcontent_direction="right"
+
+                />
 
         </com.ssomai.android.scalablelayout.ScalableLayout>
     </androidx.cardview.widget.CardView>
