--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -66,7 +66,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:background="@drawable/aqua_background_round"
                 android:text="Developers"
                 android:textColor="@color/black"
                 app:scale_height="100"
@@ -78,7 +77,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:background="@drawable/aqua_background_round"
                 android:text="developers_detail"
                 android:textColor="@color/black"
                 app:scale_height="100"
@@ -107,7 +105,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:background="@drawable/aqua_background_round"
                 android:text="Application"
                 android:textColor="@color/black"
                 app:scale_height="100"
@@ -119,7 +116,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:background="@drawable/aqua_background_round"
                 android:text="app_info_detail"
                 android:textColor="@color/black"
                 app:scale_height="100"
@@ -129,7 +125,34 @@
                 android:padding="10dp"/>
         </com.ssomai.android.scalablelayout.ScalableLayout>
     </FrameLayout>
-
+    <FrameLayout
+        android:id="@+id/frame_link"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/frame_app"
+        app:layout_constraintBottom_toTopOf="@+id/frame_bottombar"
+        android:padding="10dp">
+        <com.ssomai.android.scalablelayout.ScalableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:scale_base_height="100"
+            app:scale_base_width="400">
+            <TextView
+                android:id="@+id/link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="앱 설명 링크"
+                android:background="@color/aqua"
+                android:textColor="@color/black"
+                app:scale_height="100"
+                app:scale_textsize="20"
+                app:scale_width="400" />
+        </com.ssomai.android.scalablelayout.ScalableLayout>
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/frame_bottombar"
