--- a/app/src/main/res/layout/activity_search_2.xml
+++ b/app/src/main/res/layout/activity_search_2.xml
@@ -150,6 +150,8 @@
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constrainedHeight="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             tools:listitem="@layout/item" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -161,6 +163,8 @@
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constrainedHeight="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             tools:listitem="@layout/item_recent" />
 
 
