--- a/app/src/main/res/layout/activity_main_2_1.xml
+++ b/app/src/main/res/layout/activity_main_2_1.xml
@@ -139,6 +139,16 @@
                         app:scale_textsize="20"
                         app:scale_top="5"
                         app:scale_width="70" />
+                    <ImageView
+                        android:id="@+id/img_military"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        app:srcCompat="@drawable/category_military_50"
+                        app:scale_height="60"
+                        app:scale_left="45"
+                        app:scale_top="55"
+                        app:scale_width="60" />
 
                 </com.ssomai.android.scalablelayout.ScalableLayout>
 
@@ -172,6 +182,16 @@
                         app:scale_textsize="20"
                         app:scale_top="5"
                         app:scale_width="70" />
+                    <ImageView
+                        android:id="@+id/img_social"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        app:srcCompat="@drawable/category_society_50"
+                        app:scale_height="60"
+                        app:scale_left="45"
+                        app:scale_top="55"
+                        app:scale_width="60" />
 
                 </com.ssomai.android.scalablelayout.ScalableLayout>
 
@@ -207,6 +227,18 @@
                         app:scale_textsize="20"
                         app:scale_top="5"
                         app:scale_width="70" />
+
+                    <ImageView
+                        android:id="@+id/img_politics"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:text="정치"
+                        app:srcCompat="@drawable/category_politics_50"
+                        app:scale_height="60"
+                        app:scale_left="45"
+                        app:scale_top="55"
+                        app:scale_width="60" />
 
                 </com.ssomai.android.scalablelayout.ScalableLayout>
 
@@ -265,6 +297,16 @@
                         app:scale_textsize="20"
                         app:scale_top="5"
                         app:scale_width="70" />
+                    <ImageView
+                        android:id="@+id/img_IT"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        app:srcCompat="@drawable/category_it_50"
+                        app:scale_height="60"
+                        app:scale_left="45"
+                        app:scale_top="55"
+                        app:scale_width="60" />
                 </com.ssomai.android.scalablelayout.ScalableLayout>
 
 
@@ -297,6 +339,17 @@
                         app:scale_textsize="20"
                         app:scale_top="5"
                         app:scale_width="70" />
+                    <ImageView
+                        android:id="@+id/img_culture"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        app:srcCompat="@drawable/category_military_50"
+                        app:scale_height="60"
+                        app:scale_left="45"
+                        app:scale_top="55"
+                        app:scale_width="60" />
+
                 </com.ssomai.android.scalablelayout.ScalableLayout>
 
                 <com.ssomai.android.scalablelayout.ScalableLayout
@@ -328,6 +381,16 @@
                         app:scale_textsize="20"
                         app:scale_top="5"
                         app:scale_width="70" />
+                    <ImageView
+                        android:id="@+id/img_economy"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        app:srcCompat="@drawable/category_economy_50"
+                        app:scale_height="60"
+                        app:scale_left="45"
+                        app:scale_top="55"
+                        app:scale_width="60" />
                 </com.ssomai.android.scalablelayout.ScalableLayout>
 
             </com.ssomai.android.scalablelayout.ScalableLayout>
