--- a/app/src/main/res/layout/item_bookmark_2.xml
+++ b/app/src/main/res/layout/item_bookmark_2.xml
@@ -24,7 +24,7 @@
         app:scale_width="290">
 
         <TextView
-            android:id="@+id/term_name"
+            android:id="@+id/term"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
