--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -27,7 +27,7 @@
             app:scale_width="80">
 
             <TextView
-                android:id="@+id/term_name"
+                android:id="@+id/term"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
