--- a/app/src/main/res/layout/item_termslist.xml
+++ b/app/src/main/res/layout/item_termslist.xml
@@ -25,7 +25,7 @@
         app:scale_width="784">
 
         <TextView
-            android:id="@+id/term_name"
+            android:id="@+id/term"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
